Add polling framework

--- a/sample/SampleGames/appsettings.json
+++ b/sample/SampleGames/appsettings.json
@@ -7,10 +7,9 @@
   },
   "CrazyCircleBot": {
     "ApiToken": "",
-    "BotUserName": "CrazyCircleBot",
     "PathToCertificate": "",
     "WebhookUrl": "https://example.com/bots/{bot}/webhook/{token}",
-    "GameOptions": [
+    "Games": [
       {
         "ShortName": "crazycircle",
         "Url": "http://crazy-circle-game.apphb.com/index.html",
