--- a/src/Telegram.Bot.Framework/Telegram.Bot.Framework.csproj
+++ b/src/Telegram.Bot.Framework/Telegram.Bot.Framework.csproj
@@ -1,41 +1,33 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-    <PropertyGroup>
-        <PackageId>Telegram.Bot.Framework</PackageId>
-        <TargetFramework>netstandard1.6</TargetFramework>
-        <Description>Simple framework for building powerful Telegram bots 🤖 in ASP.NET Core</Description>
-        <Authors>Poulad</Authors>
-        <Owners>Poulad</Owners>
-        <PackageVersion>1.1.4</PackageVersion>
-        <DebugType>portable</DebugType>
-        <AssemblyName>Telegram.Bot.Framework</AssemblyName>
-        <AssemblyTitle>Telegram.Bot.Framework</AssemblyTitle>
-        <PackageTags>telegram bot chatbot chat netcore</PackageTags>
-        <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
-        <PackageReleaseNotes>Simple framework for building Telegram bots</PackageReleaseNotes>
-        <PackageProjectUrl>https://github.com/pouladpld/Telegram.Bot.Framework</PackageProjectUrl>
-        <RepositoryType>git</RepositoryType>
-        <RepositoryUrl>https://github.com/pouladpld/Telegram.Bot.Framework.git</RepositoryUrl>
-        <PackageIconUrl>https://raw.githubusercontent.com/pouladpld/Telegram.Bot.Framework/master/docs/icon.png
-        </PackageIconUrl>
-        <PackageLicenseUrl>https://raw.githubusercontent.com/pouladpld/Telegram.Bot.Framework/master/LICENSE
-        </PackageLicenseUrl>
-        <Product>Telegram.Bot.Framework</Product>
-        <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
-    </PropertyGroup>
-    <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-        <DocumentationFile>bin\Debug\netstandard1.6\Telegram.Bot.Framework.xml</DocumentationFile>
-    </PropertyGroup>
-    <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-        <DocumentationFile>bin\Release\netstandard1.6\Telegram.Bot.Framework.xml</DocumentationFile>
-    </PropertyGroup>
-    <ItemGroup>
-        <PackageReference Include="Microsoft.AspNetCore.DataProtection.Abstractions" Version="1.1.2"/>
-        <PackageReference Include="Microsoft.AspNetCore.Hosting.Abstractions" Version="1.1.2"/>
-        <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="1.1.2"/>
-        <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="1.1.2"/>
-        <PackageReference Include="Microsoft.Extensions.Options" Version="1.1.2"/>
-        <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="1.1.2"/>
-        <PackageReference Include="System.ValueTuple" Version="4.3.1"/>
-        <PackageReference Include="Telegram.Bot.Core" Version="13.2.1"/>
-    </ItemGroup>
+  <PropertyGroup>
+    <TargetFramework>netstandard1.6</TargetFramework>
+    <VersionPrefix>2.0.0</VersionPrefix>
+    <VersionSuffix>RC-1</VersionSuffix>
+    <Description>Simple framework for building powerful Telegram bots 🤖 in ASP.NET Core</Description>
+    <LangVersion>latest</LangVersion>
+    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+    <GenerateDocumentationFile>True</GenerateDocumentationFile>
+    <Authors>Poulad</Authors>
+    <PackageTags>telegram bot chatbot chat netcore</PackageTags>
+    <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
+    <PackageReleaseNotes>Simple framework for building Telegram bots</PackageReleaseNotes>
+    <PackageProjectUrl>https://github.com/TelegramBots/Telegram.Bot.Framework.git</PackageProjectUrl>
+    <RepositoryType>git</RepositoryType>
+    <RepositoryUrl>https://github.com/TelegramBots/Telegram.Bot.Framework.git</RepositoryUrl>
+    <PackageIconUrl>https://raw.githubusercontent.com/TelegramBots/Telegram.Bot.Framework/master/docs/icon.png</PackageIconUrl>
+    <PackageLicenseUrl>https://raw.githubusercontent.com/TelegramBots/Telegram.Bot.Framework/master/LICENSE</PackageLicenseUrl>
+    <Company>TelegramBots</Company>
+  </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.DataProtection.Abstractions" Version="1.1.2" />
+    <PackageReference Include="Microsoft.AspNetCore.Hosting.Abstractions" Version="1.1.2" />
+    <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="1.1.2" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="1.1.2" />
+    <PackageReference Include="Microsoft.Extensions.Options" Version="1.1.2" />
+    <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="1.1.2" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="../Telegram.Bot.Framework.Abstractions/Telegram.Bot.Framework.Abstractions.csproj" />
+  </ItemGroup>
 </Project>
