--- a/src/Telegram.Bot.Framework.Polling/Telegram.Bot.Framework.Polling.csproj
+++ b/src/Telegram.Bot.Framework.Polling/Telegram.Bot.Framework.Polling.csproj
@@ -2,11 +2,24 @@
   <PropertyGroup>
     <TargetFramework>netstandard1.1</TargetFramework>
     <VersionPrefix>1.0.0</VersionPrefix>
-    <VersionSuffix>RC-1</VersionSuffix>
+    <VersionSuffix>rc1</VersionSuffix>
     <LangVersion>latest</LangVersion>
+    <Description>Simple framework for building powerful 🤖 Telegram bots 🤖 using long polling</Description>
     <RootNamespace>Telegram.Bot.Framework</RootNamespace>
+    <DebugType>portable</DebugType>
+    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+    <GenerateDocumentationFile>True</GenerateDocumentationFile>
+    <Authors>Poulad</Authors>
+    <PackageTags>telegram bot chatbot chat netcore</PackageTags>
+    <PackageProjectUrl>https://github.com/TelegramBots/Telegram.Bot.Framework.git</PackageProjectUrl>
+    <RepositoryType>git</RepositoryType>
+    <RepositoryUrl>https://github.com/TelegramBots/Telegram.Bot.Framework.git</RepositoryUrl>
+    <PackageIconUrl>https://raw.githubusercontent.com/TelegramBots/Telegram.Bot.Framework/master/docs/icon.png</PackageIconUrl>
+    <PackageLicenseUrl>https://raw.githubusercontent.com/TelegramBots/Telegram.Bot.Framework/master/LICENSE</PackageLicenseUrl>
+    <Company>TelegramBots</Company>
   </PropertyGroup>
+
   <ItemGroup>
-    <ProjectReference Include="../Telegram.Bot.Framework.Abstractions/Telegram.Bot.Framework.Abstractions.csproj" />
+    <PackageReference Include="Telegram.Bot.Framework.Abstractions" Version="1.0.0-rc3" />
   </ItemGroup>
 </Project>
